--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "Tyson Thurman",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "unirest": "^0.6.0"
+    "dotenv": "^16.4.5"
   },
   "type": "module"
 }
