--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Tyson Thurman",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "node-fetch": "^3.3.2"
   },
   "type": "module"
 }
