--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "prettier": "3.3.3"
+  }
 }
