--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "node server/server.js"
+    "server": "node server/server.js",
+    "nodemon": "nodemon server/server.js"
   },
   "author": "Tyson Thurman",
   "license": "ISC",
@@ -17,6 +18,7 @@
   },
   "type": "module",
   "devDependencies": {
+    "nodemon": "^3.1.4",
     "prettier": "3.3.3"
   }
 }
