--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2",
-    "react-json-view": "^1.21.3"
+    "react-json-view": "^1.21.3",
+    "winston": "^3.14.2"
   },
   "type": "module",
   "devDependencies": {
